mise en place du wrapper et des sections

--- a/index.html
+++ b/index.html
@@ -31,5 +31,63 @@
         <p>please scroll</p>
       </div>
     </header>
+    <section class="about">
+      <div class="img1-wrapper">
+        <div class="img img1"></div>
+      </div>
+      <div class="h2-wrapper">
+        <h2>À propos</h2>
+      </div>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eius
+        delectus eveniet nisi eos sunt, quod ex temporibus ipsa ipsam dolorem
+        labore deleniti soluta nemo velit? Voluptate deserunt in quidem tempora,
+        officia impedit, harum sint error id est magnam tenetur debitis
+        architecto nostrum, facere corporis doloribus sunt aspernatur
+        perspiciatis blanditiis.
+      </p>
+    </section>
+    <div class="line-wrapper">
+      <div class="line"></div>
+    </div>
+    <section class="skills">
+      <h2 class="title">
+        <span>E</span>
+        <span>x</span>
+        <span>p</span>
+        <span>e</span>
+        <span>r</span>
+        <span>t</span>
+        <span>i</span>
+        <span>s</span>
+        <span>e</span>
+      </h2>
+      <div class="wrapper">
+        <div class="appear">
+          <p>HTML/CSS</p>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="appear">
+          <p>JavaScript</p>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="appear">
+          <p>React</p>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="appear">
+          <p>SEO</p>
+        </div>
+      </div>
+    </section>
+
+    <div class="line-wrapper">
+      <div class="line"></div>
+    </div>
+
+    <section class="portfolio" id="portfolio"></section>
   </body>
 </html>
