mise en place du HTML

--- a/index.html
+++ b/index.html
@@ -88,6 +88,70 @@
       <div class="line"></div>
     </div>
 
-    <section class="portfolio" id="portfolio"></section>
+    <section class="portfolio" id="portfolio">
+      <h2 class="title">
+        <span>P</span>
+        <span>o</span>
+        <span>r</span>
+        <span>r</span>
+        <span>t</span>
+        <span>f</span>
+        <span>o</span>
+        <span>l</span>
+        <span>i</span>
+        <span>o</span>
+      </h2>
+      <div class="projects-container">
+        <div class="project" id="p1">
+          <img src="./assets/img/projet-1.jpg" alt="projet 1" />
+          <div class="project-infos">
+            <a href="https://www.google.com" target="_blank">Beton</a>
+            <p>2020</p>
+          </div>
+        </div>
+        <div class="project" id="p2">
+          <img src="./assets/img/projet-2.jpg" alt="projet 2" />
+          <div class="project-infos">
+            <a href="https://www.google.com" target="_blank">Beton</a>
+            <p>2020</p>
+          </div>
+        </div>
+        <div class="project" id="p3">
+          <img src="./assets/img/projet-3.jpg" alt="projet 3" />
+          <div class="project-infos">
+            <a href="https://www.google.com" target="_blank">Beton</a>
+            <p>2020</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <div class="line-wrapper">
+      <div class="line"></div>
+    </div>
+
+    <footer>
+      <div class="wrapper">
+        <div class="appear">
+          <p>Vous avez un projet ?</p>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="appear" id="l2">
+          <p>
+            Je serai ravi d'en
+            <a href="mailto:bilal.elimrani@icloud.com">discuter</a>
+          </p>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="appear" id="l3">
+          <p>avec vous</p>
+        </div>
+      </div>
+      <div class="img-wrapper">
+        <div class="img img2"></div>
+      </div>
+    </footer>
   </body>
 </html>
