--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio Bilal El Imrani</title>
   </head>
   <body>
+    <!-- HEADER -->
     <header>
       <div class="links">
         <a href="#portfolio">portfolio</a>
@@ -31,6 +32,7 @@
         <p>please scroll</p>
       </div>
     </header>
+    <!-- SECTION  ABOUT -->
     <section class="about">
       <div class="img1-wrapper">
         <div class="img img1"></div>
@@ -50,6 +52,7 @@
     <div class="line-wrapper">
       <div class="line"></div>
     </div>
+    <!-- SECTION  SKILLS -->
     <section class="skills">
       <h2 class="title">
         <span>E</span>
@@ -83,11 +86,11 @@
         </div>
       </div>
     </section>
-
+    <!-- LINE -->
     <div class="line-wrapper">
       <div class="line"></div>
     </div>
-
+    <!-- SECTION PORTFOLIO -->
     <section class="portfolio" id="portfolio">
       <h2 class="title">
         <span>P</span>
@@ -125,11 +128,11 @@
         </div>
       </div>
     </section>
-
+    <!-- LINE -->
     <div class="line-wrapper">
       <div class="line"></div>
     </div>
-
+    <!-- FOOTER -->
     <footer>
       <div class="wrapper">
         <div class="appear">
