--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html
+  lang="fr"
+  class="is-smooth-scroll-compatible is-loaded is-ready has-scroll-init has-scroll-smooth"
+>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Bilal El Imrani</title>
+    <link rel="stylesheet" href="./assets/lib/locomotive-scroll.min.css" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
-  <body>
+  <body data-scroll-container>
     <!-- HEADER -->
-    <header>
+    <header data-scroll>
       <div class="links">
         <a href="#portfolio">portfolio</a>
         <a href="mailto:jeanscratch@gmail.com">contact</a>
@@ -19,7 +23,7 @@
           <h1>Bilal El Imrani</h1>
         </div>
       </div>
-      <div class="wrapper">
+      <div data-scroll data-scroll-repeat="true" class="wrapper">
         <div class="appear" id="h2-1">
           <h2>Développeur</h2>
         </div>
@@ -156,5 +160,9 @@
         <div class="img img2"></div>
       </div>
     </footer>
+
+    <!-- JAVASCRIPT -->
+    <script src="./assets/lib/locomotive-scroll.min.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
