--- a/index.html
+++ b/index.html
@@ -11,155 +11,157 @@
     <link rel="stylesheet" href="./assets/lib/locomotive-scroll.min.css" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
-  <body data-scroll-container>
-    <!-- HEADER -->
-    <header data-scroll>
-      <div class="links">
-        <a href="#portfolio">portfolio</a>
-        <a href="mailto:jeanscratch@gmail.com">contact</a>
-      </div>
-      <div class="wrapper">
-        <div class="appear" id="h1-wrapper">
-          <h1>Bilal El Imrani</h1>
+  <body>
+    <div data-scroll-container>
+      <!-- HEADER -->
+      <header data-scroll>
+        <div class="links">
+          <a href="#portfolio" data-scroll-to>portfolio</a>
+          <a href="mailto:jeanscratch@gmail.com">contact</a>
         </div>
-      </div>
-      <div data-scroll data-scroll-repeat="true" class="wrapper">
-        <div class="appear" id="h2-1">
-          <h2>Développeur</h2>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div class="appear" id="h2-2">
-          <h2>Frontend</h2>
-        </div>
-      </div>
-      <div class="scroll-wrapper">
-        <p>please scroll</p>
-      </div>
-    </header>
-    <!-- SECTION  ABOUT -->
-    <section class="about">
-      <div class="img1-wrapper">
-        <div class="img img1"></div>
-      </div>
-      <div class="h2-wrapper">
-        <h2>À propos</h2>
-      </div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore eius
-        delectus eveniet nisi eos sunt, quod ex temporibus ipsa ipsam dolorem
-        labore deleniti soluta nemo velit? Voluptate deserunt in quidem tempora,
-        officia impedit, harum sint error id est magnam tenetur debitis
-        architecto nostrum, facere corporis doloribus sunt aspernatur
-        perspiciatis blanditiis.
-      </p>
-    </section>
-    <div class="line-wrapper">
-      <div class="line"></div>
-    </div>
-    <!-- SECTION  SKILLS -->
-    <section class="skills">
-      <h2 class="title">
-        <span>E</span>
-        <span>x</span>
-        <span>p</span>
-        <span>e</span>
-        <span>r</span>
-        <span>t</span>
-        <span>i</span>
-        <span>s</span>
-        <span>e</span>
-      </h2>
-      <div class="wrapper">
-        <div class="appear">
-          <p>HTML/CSS</p>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div class="appear">
-          <p>JavaScript</p>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div class="appear">
-          <p>React</p>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div class="appear">
-          <p>SEO</p>
-        </div>
-      </div>
-    </section>
-    <!-- LINE -->
-    <div class="line-wrapper">
-      <div class="line"></div>
-    </div>
-    <!-- SECTION PORTFOLIO -->
-    <section class="portfolio" id="portfolio">
-      <h2 class="title">
-        <span>P</span>
-        <span>o</span>
-        <span>r</span>
-        <span>t</span>
-        <span>f</span>
-        <span>o</span>
-        <span>l</span>
-        <span>i</span>
-        <span>o</span>
-      </h2>
-      <div class="projects-container">
-        <div class="project" id="p1">
-          <img src="./assets/img/projet-1.jpg" alt="projet 1" />
-          <div class="project-infos">
-            <a href="https://www.google.com" target="_blank">Beton</a>
-            <p>2020</p>
+        <div class="wrapper">
+          <div data-scroll class="appear" id="h1-wrapper">
+            <h1>Bilal El Imrani</h1>
           </div>
         </div>
-        <div class="project" id="p2">
-          <img src="./assets/img/projet-2.jpg" alt="projet 2" />
-          <div class="project-infos">
-            <a href="https://www.google.com" target="_blank">Beton</a>
-            <p>2020</p>
+        <div data-scroll data-scroll-repeat="true" class="wrapper" id="color">
+          <div data-scroll class="appear" id="h2-1">
+            <h2>Développeur</h2>
           </div>
         </div>
-        <div class="project" id="p3">
-          <img src="./assets/img/projet-3.jpg" alt="projet 3" />
-          <div class="project-infos">
-            <a href="https://www.google.com" target="_blank">Beton</a>
-            <p>2020</p>
+        <div class="wrapper">
+          <div data-scroll class="appear" id="h2-2">
+            <h2>Frontend</h2>
           </div>
         </div>
+        <div class="scroll-wrapper">
+          <p>please scroll</p>
+        </div>
+      </header>
+      <!-- SECTION  ABOUT -->
+      <section class="about">
+        <div class="img1-wrapper">
+          <div class="img img1"></div>
+        </div>
+        <div class="h2-wrapper">
+          <h2>À propos</h2>
+        </div>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore
+          eius delectus eveniet nisi eos sunt, quod ex temporibus ipsa ipsam
+          dolorem labore deleniti soluta nemo velit? Voluptate deserunt in
+          quidem tempora, officia impedit, harum sint error id est magnam
+          tenetur debitis architecto nostrum, facere corporis doloribus sunt
+          aspernatur perspiciatis blanditiis.
+        </p>
+      </section>
+      <div class="line-wrapper">
+        <div class="line"></div>
       </div>
-    </section>
-    <!-- LINE -->
-    <div class="line-wrapper">
-      <div class="line"></div>
+      <!-- SECTION  SKILLS -->
+      <section class="skills">
+        <h2 class="title">
+          <span>E</span>
+          <span>x</span>
+          <span>p</span>
+          <span>e</span>
+          <span>r</span>
+          <span>t</span>
+          <span>i</span>
+          <span>s</span>
+          <span>e</span>
+        </h2>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p>HTML/CSS</p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p>JavaScript</p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p>React</p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p>SEO</p>
+          </div>
+        </div>
+      </section>
+      <!-- LINE -->
+      <div class="line-wrapper">
+        <div class="line"></div>
+      </div>
+      <!-- SECTION PORTFOLIO -->
+      <section class="portfolio" id="portfolio">
+        <h2 class="title">
+          <span>P</span>
+          <span>o</span>
+          <span>r</span>
+          <span>t</span>
+          <span>f</span>
+          <span>o</span>
+          <span>l</span>
+          <span>i</span>
+          <span>o</span>
+        </h2>
+        <div class="projects-container">
+          <div class="project" id="p1">
+            <img src="./assets/img/projet-1.jpg" alt="projet 1" />
+            <div class="project-infos">
+              <a href="https://www.google.com" target="_blank">Beton</a>
+              <p>2020</p>
+            </div>
+          </div>
+          <div class="project" id="p2">
+            <img src="./assets/img/projet-2.jpg" alt="projet 2" />
+            <div class="project-infos">
+              <a href="https://www.google.com" target="_blank">Beton</a>
+              <p>2020</p>
+            </div>
+          </div>
+          <div class="project" id="p3">
+            <img src="./assets/img/projet-3.jpg" alt="projet 3" />
+            <div class="project-infos">
+              <a href="https://www.google.com" target="_blank">Beton</a>
+              <p>2020</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- LINE -->
+      <div class="line-wrapper">
+        <div class="line"></div>
+      </div>
+      <!-- FOOTER -->
+      <footer>
+        <div class="wrapper">
+          <div class="appear">
+            <p>Vous avez un projet ?</p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear" id="l2">
+            <p>
+              Je serai ravi d'en
+              <a href="mailto:bilal.elimrani@icloud.com">discuter</a>
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear" id="l3">
+            <p>avec vous</p>
+          </div>
+        </div>
+        <div class="img-wrapper">
+          <div data-scroll class="img img2"></div>
+        </div>
+      </footer>
     </div>
-    <!-- FOOTER -->
-    <footer>
-      <div class="wrapper">
-        <div class="appear">
-          <p>Vous avez un projet ?</p>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div class="appear" id="l2">
-          <p>
-            Je serai ravi d'en
-            <a href="mailto:bilal.elimrani@icloud.com">discuter</a>
-          </p>
-        </div>
-      </div>
-      <div class="wrapper">
-        <div class="appear" id="l3">
-          <p>avec vous</p>
-        </div>
-      </div>
-      <div class="img-wrapper">
-        <div class="img img2"></div>
-      </div>
-    </footer>
 
     <!-- JAVASCRIPT -->
     <script src="./assets/lib/locomotive-scroll.min.js"></script>
