--- a/index.html
+++ b/index.html
@@ -21,29 +21,47 @@
         </div>
         <div class="wrapper">
           <div data-scroll class="appear" id="h1-wrapper">
-            <h1>Bilal El Imrani</h1>
+            <h1 data-scroll data-scroll-speed="4" data-scroll-position="left">
+              Bilal El Imrani
+            </h1>
           </div>
         </div>
         <div data-scroll data-scroll-repeat="true" class="wrapper" id="color">
           <div data-scroll class="appear" id="h2-1">
-            <h2>Développeur</h2>
+            <h2
+              data-scroll
+              data-scroll-speed="6"
+              data-scroll-direction="horizontal"
+              data-scroll-position="left"
+            >
+              Développeur
+            </h2>
           </div>
         </div>
         <div class="wrapper">
           <div data-scroll class="appear" id="h2-2">
-            <h2>Frontend</h2>
+            <h2
+              data-scroll
+              data-scroll-speed="-6"
+              data-scroll-direction="horizontal"
+              data-scroll-position="left"
+            >
+              Frontend
+            </h2>
           </div>
         </div>
         <div class="scroll-wrapper">
-          <p>please scroll</p>
+          <p data-scroll data-scroll-speed="-3" data-scroll-position="top">
+            please scroll
+          </p>
         </div>
       </header>
       <!-- SECTION  ABOUT -->
       <section class="about">
-        <div class="img1-wrapper">
+        <div data-scroll data-scroll-speed="-1" class="img1-wrapper">
           <div class="img img1"></div>
         </div>
-        <div class="h2-wrapper">
+        <div data-scroll data-scroll-speed="3" class="h2-wrapper">
           <h2>À propos</h2>
         </div>
         <p>
@@ -55,76 +73,100 @@
           aspernatur perspiciatis blanditiis.
         </p>
       </section>
-      <div class="line-wrapper">
+      <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
       <!-- SECTION  SKILLS -->
       <section class="skills">
         <h2 class="title">
-          <span>E</span>
-          <span>x</span>
-          <span>p</span>
-          <span>e</span>
-          <span>r</span>
-          <span>t</span>
-          <span>i</span>
-          <span>s</span>
-          <span>e</span>
+          <span data-scroll data-scroll-speed="1">E</span>
+          <span data-scroll data-scroll-speed="0">x</span>
+          <span data-scroll data-scroll-speed="1">p</span>
+          <span data-scroll data-scroll-speed="2">e</span>
+          <span data-scroll data-scroll-speed="0">r</span>
+          <span data-scroll data-scroll-speed="1">t</span>
+          <span data-scroll data-scroll-speed="2">i</span>
+          <span data-scroll data-scroll-speed="1">s</span>
+          <span data-scroll data-scroll-speed="0">e</span>
         </h2>
         <div class="wrapper">
           <div data-scroll class="appear">
-            <p>HTML/CSS</p>
+            <p
+              data-scroll
+              data-scroll-speed="-2"
+              data-scroll-direction="horizontal"
+            >
+              HTML/CSS
+            </p>
           </div>
         </div>
         <div class="wrapper">
           <div data-scroll class="appear">
-            <p>JavaScript</p>
+            <p
+              data-scroll
+              data-scroll-speed="1"
+              data-scroll-direction="horizontal"
+            >
+              JavaScript
+            </p>
           </div>
         </div>
         <div class="wrapper">
           <div data-scroll class="appear">
-            <p>React</p>
+            <p
+              data-scroll
+              data-scroll-speed="-6"
+              data-scroll-direction="horizontal"
+            >
+              React
+            </p>
           </div>
         </div>
         <div class="wrapper">
           <div data-scroll class="appear">
-            <p>SEO</p>
+            <p
+              data-scroll
+              data-scroll-speed="3"
+              data-scroll-direction="horizontal"
+            >
+              SEO
+            </p>
           </div>
         </div>
       </section>
       <!-- LINE -->
-      <div class="line-wrapper">
+      <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
       <!-- SECTION PORTFOLIO -->
       <section class="portfolio" id="portfolio">
         <h2 class="title">
-          <span>P</span>
-          <span>o</span>
-          <span>r</span>
-          <span>t</span>
-          <span>f</span>
-          <span>o</span>
-          <span>l</span>
-          <span>i</span>
-          <span>o</span>
+          <span data-scroll data-scroll-speed="1">P</span>
+          <span data-scroll data-scroll-speed="0">o</span>
+          <span data-scroll data-scroll-speed="1">r</span>
+          <span data-scroll data-scroll-speed="2">t</span>
+          <span data-scroll data-scroll-speed="0">f</span>
+          <span data-scroll data-scroll-speed="1">o</span>
+          <span data-scroll data-scroll-speed="2">l</span>
+          <span data-scroll data-scroll-speed="1">i</span>
+          <span data-scroll data-scroll-speed="0">o</span>
         </h2>
         <div class="projects-container">
-          <div class="project" id="p1">
+          <div data-scroll data-scroll-speed="1" class="project" id="p1">
             <img src="./assets/img/projet-1.jpg" alt="projet 1" />
             <div class="project-infos">
               <a href="https://www.google.com" target="_blank">Beton</a>
               <p>2020</p>
             </div>
           </div>
-          <div class="project" id="p2">
+          <div data-scroll class="project" id="p2">
             <img src="./assets/img/projet-2.jpg" alt="projet 2" />
             <div class="project-infos">
               <a href="https://www.google.com" target="_blank">Beton</a>
               <p>2020</p>
             </div>
           </div>
-          <div class="project" id="p3">
+          <div data-scroll class="project" id="p3">
             <img src="./assets/img/projet-3.jpg" alt="projet 3" />
             <div class="project-infos">
               <a href="https://www.google.com" target="_blank">Beton</a>
@@ -134,7 +176,7 @@
         </div>
       </section>
       <!-- LINE -->
-      <div class="line-wrapper">
+      <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
       <!-- FOOTER -->
