--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-  lang="fr"
+  lang="en"
   class="is-smooth-scroll-compatible is-loaded is-ready has-scroll-init has-scroll-smooth"
 >
   <head>
@@ -8,13 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Bilal El Imrani</title>
+
     <link rel="stylesheet" href="./assets/lib/locomotive-scroll.min.css" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
     <div data-scroll-container>
       <!-- HEADER -->
-      <header data-scroll>
+      <!-- <header data-scroll>
         <div class="links">
           <a href="#portfolio" data-scroll-to>portfolio</a>
           <a href="mailto:jeanscratch@gmail.com">contact</a>
@@ -46,7 +47,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              Frontend
+              Front-end
             </h2>
           </div>
         </div>
@@ -55,9 +56,10 @@
             please scroll
           </p>
         </div>
-      </header>
-      <!-- SECTION  ABOUT -->
-      <section class="about">
+      </header> -->
+      -->
+      <!-- SECTION ABOUT -->
+      <!-- <section class="about">
         <div data-scroll data-scroll-speed="-1" class="img1-wrapper">
           <div class="img img1"></div>
         </div>
@@ -65,19 +67,24 @@
           <h2>À propos</h2>
         </div>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore
-          eius delectus eveniet nisi eos sunt, quod ex temporibus ipsa ipsam
-          dolorem labore deleniti soluta nemo velit? Voluptate deserunt in
-          quidem tempora, officia impedit, harum sint error id est magnam
-          tenetur debitis architecto nostrum, facere corporis doloribus sunt
-          aspernatur perspiciatis blanditiis.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
+          suscipit, minima cupiditate quisquam quibusdam accusamus velit nam
+          perspiciatis odit, sed dolor doloribus? Exercitationem amet quod, unde
+          quaerat delectus eius optio expedita? In sequi non, est vero veniam,
+          earum beatae assumenda commodi recusandae consequuntur quod laboriosam
+          doloribus cum doloremque dolore hic eos perferendis explicabo culpa
+          eum sed delectus deleniti ad! Quia culpa voluptates fuga enim? Et
+          dolore fugiat labore quae, officia provident maxime voluptatum beatae
+          delectus hic, quia placeat harum quibusdam.
         </p>
-      </section>
-      <div data-scroll class="line-wrapper">
+      </section> -->
+      <!-- LINE -->
+      <!-- <div data-scroll class="line-wrapper">
         <div class="line"></div>
-      </div>
-      <!-- SECTION  SKILLS -->
-      <section class="skills">
+      </div> -->
+      -->
+      <!-- SECTION SKILLS -->
+      <!-- <section class="skills">
         <h2 class="title">
           <span data-scroll data-scroll-speed="1">E</span>
           <span data-scroll data-scroll-speed="0">x</span>
@@ -126,6 +133,17 @@
           <div data-scroll class="appear">
             <p
               data-scroll
+              data-scroll-speed="-3"
+              data-scroll-direction="horizontal"
+            >
+              UX/UI
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
               data-scroll-speed="3"
               data-scroll-direction="horizontal"
             >
@@ -133,7 +151,7 @@
             </p>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- LINE -->
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
@@ -155,56 +173,76 @@
           <div data-scroll data-scroll-speed="1" class="project" id="p1">
             <img src="./assets/img/projet-1.jpg" alt="projet 1" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Beton</a>
-              <p>2020</p>
+              <a
+                href="https://github.com/Bilal-Elimrani-67/ProjectYT-Sunnyside"
+                target="_blank"
+                >Sunnyside</a
+              >
+              <p>HTML & CSS</p>
             </div>
           </div>
           <div data-scroll class="project" id="p2">
-            <img src="./assets/img/projet-2.jpg" alt="projet 2" />
+            <img src="./assets/img/projet-2.PNG" alt="projet 2" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Beton</a>
-              <p>2020</p>
+              <a
+                href="https://github.com/Bilal-Elimrani-67/ProjectYT-ReactMovies"
+                target="_blank"
+                >React Movies</a
+              >
+              <p>React</p>
             </div>
           </div>
           <div data-scroll class="project" id="p3">
             <img src="./assets/img/projet-3.jpg" alt="projet 3" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Beton</a>
-              <p>2020</p>
+              <a
+                href="https://github.com/Bilal-Elimrani-67/Groupomania"
+                target="_blank"
+                >Groupomania</a
+              >
+              <p>React & NodeJS</p>
             </div>
           </div>
         </div>
       </section>
-      <!-- LINE -->
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
       <!-- FOOTER -->
       <footer>
         <div class="wrapper">
-          <div class="appear">
-            <p>Vous avez un projet ?</p>
+          <div data-scroll class="appear">
+            <p>Plus d'informations ?</p>
           </div>
         </div>
         <div class="wrapper">
           <div data-scroll class="appear" id="l2">
-            <p>
-              Je serai ravi d'en
-              <a href="mailto:bilal.elimrani@icloud.com">discuter</a>
-            </p>
+            <p>Vous pouvez consultez mon CV ci-dessous</p>
           </div>
         </div>
-        <div class="wrapper">
-          <div data-scroll class="appear" id="l3">
-            <p>avec vous</p>
+        <div
+          data-scroll
+          data-scroll-speed="7"
+          data-scroll-position="bottom"
+          class="img-wrapper"
+        >
+          <div class="projects-container">
+            <div data-scroll data-scroll-speed="1" class="project" id="cv">
+              <img src="./assets/img/CV.PNG" alt="CV" />
+              <div class="project-infos">
+                <a href="/assets/img/CV.PNG" target="_blank">Mon CV</a>
+                <p>2022</p>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="img-wrapper">
-          <div data-scroll class="img img2"></div>
+        <br /><br /><br /><br />
+        <div data-scroll class="line-wrapper">
+          <div class="line"></div>
         </div>
+        <p>Hello</p>
       </footer>
     </div>
-
     <!-- JAVASCRIPT -->
     <script src="./assets/lib/locomotive-scroll.min.js"></script>
     <script src="./assets/js/index.js"></script>
