--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-  lang="en"
+  lang="fr"
   class="is-smooth-scroll-compatible is-loaded is-ready has-scroll-init has-scroll-smooth"
 >
   <head>
@@ -8,14 +8,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Bilal El Imrani</title>
-
+    <link rel="shortcut icon" href="./assets/img/uxui.png" />
     <link rel="stylesheet" href="./assets/lib/locomotive-scroll.min.css" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
     <div data-scroll-container>
       <!-- HEADER -->
-      <!-- <header data-scroll>
+      <header data-scroll>
         <div class="links">
           <a href="#portfolio" data-scroll-to>portfolio</a>
           <a href="mailto:jeanscratch@gmail.com">contact</a>
@@ -35,7 +35,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              Développeur
+              UX/UI
             </h2>
           </div>
         </div>
@@ -47,7 +47,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              Front-end
+              Designer
             </h2>
           </div>
         </div>
@@ -56,10 +56,9 @@
             please scroll
           </p>
         </div>
-      </header> -->
-      -->
+      </header>
       <!-- SECTION ABOUT -->
-      <!-- <section class="about">
+      <section class="about">
         <div data-scroll data-scroll-speed="-1" class="img1-wrapper">
           <div class="img img1"></div>
         </div>
@@ -77,14 +76,13 @@
           dolore fugiat labore quae, officia provident maxime voluptatum beatae
           delectus hic, quia placeat harum quibusdam.
         </p>
-      </section> -->
+      </section>
       <!-- LINE -->
-      <!-- <div data-scroll class="line-wrapper">
+      <div data-scroll class="line-wrapper">
         <div class="line"></div>
-      </div> -->
-      -->
-      <!-- SECTION SKILLS -->
-      <!-- <section class="skills">
+      </div>
+      <!-- SECTIONS SKILLS -->
+      <section class="skills">
         <h2 class="title">
           <span data-scroll data-scroll-speed="1">E</span>
           <span data-scroll data-scroll-speed="0">x</span>
@@ -96,6 +94,7 @@
           <span data-scroll data-scroll-speed="1">s</span>
           <span data-scroll data-scroll-speed="0">e</span>
         </h2>
+
         <div class="wrapper">
           <div data-scroll class="appear">
             <p
@@ -111,7 +110,18 @@
           <div data-scroll class="appear">
             <p
               data-scroll
-              data-scroll-speed="1"
+              data-scroll-speed="6"
+              data-scroll-direction="horizontal"
+            >
+              UX/UI
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="3"
               data-scroll-direction="horizontal"
             >
               JavaScript
@@ -133,25 +143,14 @@
           <div data-scroll class="appear">
             <p
               data-scroll
-              data-scroll-speed="-3"
-              data-scroll-direction="horizontal"
-            >
-              UX/UI
-            </p>
-          </div>
-        </div>
-        <div class="wrapper">
-          <div data-scroll class="appear">
-            <p
-              data-scroll
-              data-scroll-speed="3"
+              data-scroll-speed="2"
               data-scroll-direction="horizontal"
             >
               SEO
             </p>
           </div>
         </div>
-      </section> -->
+      </section>
       <!-- LINE -->
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
@@ -182,14 +181,14 @@
             </div>
           </div>
           <div data-scroll class="project" id="p2">
-            <img src="./assets/img/projet-2.PNG" alt="projet 2" />
+            <img src="./assets/img/projet-2.png" alt="projet 2" />
             <div class="project-infos">
               <a
                 href="https://github.com/Bilal-Elimrani-67/ProjectYT-ReactMovies"
                 target="_blank"
                 >React Movies</a
               >
-              <p>React</p>
+              <p>REACT</p>
             </div>
           </div>
           <div data-scroll class="project" id="p3">
@@ -205,6 +204,7 @@
           </div>
         </div>
       </section>
+      <!-- LINE -->
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
@@ -236,11 +236,11 @@
             </div>
           </div>
         </div>
-        <br /><br /><br /><br />
+        <br /><br /><br />
+        <!-- LINE -->
         <div data-scroll class="line-wrapper">
           <div class="line"></div>
         </div>
-        <p>Hello</p>
       </footer>
     </div>
     <!-- JAVASCRIPT -->
