--- a/index.html
+++ b/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html
-  lang="fr"
+  lang="en"
   class="is-smooth-scroll-compatible is-loaded is-ready has-scroll-init has-scroll-smooth"
 >
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Bilal El Imrani</title>
-    <link rel="shortcut icon" href="./assets/img/uxui.png" />
+    <title>Portfolio Jean Scratch</title>
+
     <link rel="stylesheet" href="./assets/lib/locomotive-scroll.min.css" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
     <div data-scroll-container>
-      <!-- HEADER -->
       <header data-scroll>
         <div class="links">
           <a href="#portfolio" data-scroll-to>portfolio</a>
@@ -23,7 +22,7 @@
         <div class="wrapper">
           <div data-scroll class="appear" id="h1-wrapper">
             <h1 data-scroll data-scroll-speed="4" data-scroll-position="left">
-              Bilal El Imrani
+              Jean Scratch
             </h1>
           </div>
         </div>
@@ -35,7 +34,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              UX/UI
+              Développeur
             </h2>
           </div>
         </div>
@@ -47,7 +46,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              Designer
+              Front-end
             </h2>
           </div>
         </div>
@@ -57,7 +56,7 @@
           </p>
         </div>
       </header>
-      <!-- SECTION ABOUT -->
+
       <section class="about">
         <div data-scroll data-scroll-speed="-1" class="img1-wrapper">
           <div class="img img1"></div>
@@ -77,11 +76,11 @@
           delectus hic, quia placeat harum quibusdam.
         </p>
       </section>
-      <!-- LINE -->
+
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
-      <!-- SECTIONS SKILLS -->
+
       <section class="skills">
         <h2 class="title">
           <span data-scroll data-scroll-speed="1">E</span>
@@ -102,28 +101,6 @@
               data-scroll-speed="-2"
               data-scroll-direction="horizontal"
             >
-              HTML/CSS
-            </p>
-          </div>
-        </div>
-        <div class="wrapper">
-          <div data-scroll class="appear">
-            <p
-              data-scroll
-              data-scroll-speed="6"
-              data-scroll-direction="horizontal"
-            >
-              UX/UI
-            </p>
-          </div>
-        </div>
-        <div class="wrapper">
-          <div data-scroll class="appear">
-            <p
-              data-scroll
-              data-scroll-speed="3"
-              data-scroll-direction="horizontal"
-            >
               JavaScript
             </p>
           </div>
@@ -132,7 +109,7 @@
           <div data-scroll class="appear">
             <p
               data-scroll
-              data-scroll-speed="-6"
+              data-scroll-speed="1"
               data-scroll-direction="horizontal"
             >
               React
@@ -143,7 +120,18 @@
           <div data-scroll class="appear">
             <p
               data-scroll
-              data-scroll-speed="2"
+              data-scroll-speed="-6"
+              data-scroll-direction="horizontal"
+            >
+              CSS/SASS
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="3"
               data-scroll-direction="horizontal"
             >
               SEO
@@ -151,11 +139,11 @@
           </div>
         </div>
       </section>
-      <!-- LINE -->
+
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
-      <!-- SECTION PORTFOLIO -->
+
       <section class="portfolio" id="portfolio">
         <h2 class="title">
           <span data-scroll data-scroll-speed="1">P</span>
@@ -172,47 +160,35 @@
           <div data-scroll data-scroll-speed="1" class="project" id="p1">
             <img src="./assets/img/projet-1.jpg" alt="projet 1" />
             <div class="project-infos">
-              <a
-                href="https://github.com/Bilal-Elimrani-67/ProjectYT-Sunnyside"
-                target="_blank"
-                >Sunnyside</a
-              >
-              <p>HTML & CSS</p>
+              <a href="https://www.google.com" target="_blank">Lyon Beton</a>
+              <p>2020</p>
             </div>
           </div>
           <div data-scroll class="project" id="p2">
             <img src="./assets/img/projet-2.png" alt="projet 2" />
             <div class="project-infos">
-              <a
-                href="https://github.com/Bilal-Elimrani-67/ProjectYT-ReactMovies"
-                target="_blank"
-                >React Movies</a
-              >
-              <p>REACT</p>
+              <a href="https://www.google.com" target="_blank">Casta</a>
+              <p>2021</p>
             </div>
           </div>
           <div data-scroll class="project" id="p3">
             <img src="./assets/img/projet-3.jpg" alt="projet 3" />
             <div class="project-infos">
-              <a
-                href="https://github.com/Bilal-Elimrani-67/Groupomania"
-                target="_blank"
-                >Groupomania</a
-              >
-              <p>React & NodeJS</p>
+              <a href="https://www.google.com" target="_blank">Everpost</a>
+              <p>2022</p>
             </div>
           </div>
         </div>
       </section>
-      <!-- LINE -->
+
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
-      <!-- FOOTER -->
+
       <footer>
         <div class="wrapper">
           <div data-scroll class="appear">
-            <p>Plus d'informations ?</p>
+            <p>Envie d'en savoir plus ?</p>
           </div>
         </div>
         <div class="wrapper">
@@ -237,13 +213,9 @@
           </div>
         </div>
         <br /><br /><br />
-        <!-- LINE -->
-        <div data-scroll class="line-wrapper">
-          <div class="line"></div>
-        </div>
       </footer>
     </div>
-    <!-- JAVASCRIPT -->
+
     <script src="./assets/lib/locomotive-scroll.min.js"></script>
     <script src="./assets/js/index.js"></script>
   </body>
