--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-  lang="en"
+  lang="fr"
   class="is-smooth-scroll-compatible is-loaded is-ready has-scroll-init has-scroll-smooth"
 >
   <head>
@@ -151,6 +151,7 @@
           <span data-scroll data-scroll-speed="1">r</span>
           <span data-scroll data-scroll-speed="2">t</span>
           <span data-scroll data-scroll-speed="0">f</span>
+
           <span data-scroll data-scroll-speed="1">o</span>
           <span data-scroll data-scroll-speed="2">l</span>
           <span data-scroll data-scroll-speed="1">i</span>
@@ -213,6 +214,18 @@
           </div>
         </div>
         <br /><br /><br />
+        <!-- LINE -->
+        <div data-scroll class="line-wrapper">
+          <div class="line"></div>
+        </div>
+
+        <div class="social">
+          <a href="https://www.linkedin.com/in/belimrani/" target="_blank"
+            >In</a
+          >
+          <a href="https://github.com/Bilal-Elimrani-67" target="_blank">Gh</a>
+        </div>
+        <br /><br /><br /><br /><br /><br /><br /><br />
       </footer>
     </div>
 
