rajout photo + skills

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div data-scroll-container>
+      <!-- HEADER -->
       <header data-scroll>
         <div class="links">
           <a href="#portfolio" data-scroll-to>portfolio</a>
@@ -22,7 +23,7 @@
         <div class="wrapper">
           <div data-scroll class="appear" id="h1-wrapper">
             <h1 data-scroll data-scroll-speed="4" data-scroll-position="left">
-              Jean Scratch
+              Bilal El Imrani
             </h1>
           </div>
         </div>
@@ -34,7 +35,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              Développeur
+              UX/UI
             </h2>
           </div>
         </div>
@@ -46,7 +47,7 @@
               data-scroll-direction="horizontal"
               data-scroll-position="left"
             >
-              Front-end
+              Designer
             </h2>
           </div>
         </div>
@@ -56,7 +57,7 @@
           </p>
         </div>
       </header>
-
+      <!-- ABOUT -->
       <section class="about">
         <div data-scroll data-scroll-speed="-1" class="img1-wrapper">
           <div class="img img1"></div>
@@ -77,21 +78,22 @@
         </p>
       </section>
 
+      <!-- LINE -->
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
-
+      <!-- FRONT-END -->
       <section class="skills">
         <h2 class="title">
-          <span data-scroll data-scroll-speed="1">E</span>
-          <span data-scroll data-scroll-speed="0">x</span>
-          <span data-scroll data-scroll-speed="1">p</span>
-          <span data-scroll data-scroll-speed="2">e</span>
+          <span data-scroll data-scroll-speed="1">F</span>
           <span data-scroll data-scroll-speed="0">r</span>
-          <span data-scroll data-scroll-speed="1">t</span>
-          <span data-scroll data-scroll-speed="2">i</span>
-          <span data-scroll data-scroll-speed="1">s</span>
-          <span data-scroll data-scroll-speed="0">e</span>
+          <span data-scroll data-scroll-speed="1">o</span>
+          <span data-scroll data-scroll-speed="2">n</span>
+          <span data-scroll data-scroll-speed="0">t</span>
+          <span data-scroll data-scroll-speed="1">-</span>
+          <span data-scroll data-scroll-speed="2">e</span>
+          <span data-scroll data-scroll-speed="1">n</span>
+          <span data-scroll data-scroll-speed="0">d</span>
         </h2>
 
         <div class="wrapper">
@@ -101,7 +103,7 @@
               data-scroll-speed="-2"
               data-scroll-direction="horizontal"
             >
-              JavaScript
+              HTML/CSS
             </p>
           </div>
         </div>
@@ -112,7 +114,7 @@
               data-scroll-speed="1"
               data-scroll-direction="horizontal"
             >
-              React
+              JavaScript
             </p>
           </div>
         </div>
@@ -123,7 +125,7 @@
               data-scroll-speed="-6"
               data-scroll-direction="horizontal"
             >
-              CSS/SASS
+              React
             </p>
           </div>
         </div>
@@ -134,16 +136,72 @@
               data-scroll-speed="3"
               data-scroll-direction="horizontal"
             >
-              SEO
+              WordPress
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="3"
+              data-scroll-direction="horizontal"
+            >
+              SEO/SEA
             </p>
           </div>
         </div>
       </section>
+      <!-- DESIGN -->
+      <section class="skills">
+        <h2 class="title">
+          <span data-scroll data-scroll-speed="1">D</span>
+          <span data-scroll data-scroll-speed="0">e</span>
+          <span data-scroll data-scroll-speed="1">s</span>
+          <span data-scroll data-scroll-speed="2">i</span>
+          <span data-scroll data-scroll-speed="0">g</span>
+          <span data-scroll data-scroll-speed="1">n</span>
+        </h2>
 
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="-2"
+              data-scroll-direction="horizontal"
+            >
+              Adobe XD
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="1"
+              data-scroll-direction="horizontal"
+            >
+              Figma
+            </p>
+          </div>
+        </div>
+        <div class="wrapper">
+          <div data-scroll class="appear">
+            <p
+              data-scroll
+              data-scroll-speed="-6"
+              data-scroll-direction="horizontal"
+            >
+              Photoshop
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- LINE -->
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
-
+      <!-- Portfolio -->
       <section class="portfolio" id="portfolio">
         <h2 class="title">
           <span data-scroll data-scroll-speed="1">P</span>
@@ -181,11 +239,11 @@
           </div>
         </div>
       </section>
-
+      <!-- LINE -->
       <div data-scroll class="line-wrapper">
         <div class="line"></div>
       </div>
-
+      <!-- FOOTER -->
       <footer>
         <div class="wrapper">
           <div data-scroll class="appear">
