rajout id social

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <header data-scroll>
         <div class="links">
           <a href="#portfolio" data-scroll-to>portfolio</a>
-          <a href="mailto:jeanscratch@gmail.com">contact</a>
+          <a href="#social" data-scroll-to>social</a>
+          <a href="mailto:bilal.elimrani@icloud.com">contact</a>
         </div>
         <div class="wrapper">
           <div data-scroll class="appear" id="h1-wrapper">
@@ -277,7 +278,7 @@
           <div class="line"></div>
         </div>
 
-        <div class="social">
+        <div class="social" id="social">
           <a href="https://www.linkedin.com/in/belimrani/" target="_blank"
             >In</a
           >
