--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <div data-scroll class="appear">
             <p
               data-scroll
-              data-scroll-speed="3"
+              data-scroll-speed="-3"
               data-scroll-direction="horizontal"
             >
               SEO/SEA
@@ -235,6 +235,13 @@
             <img src="./assets/img/projet-3.jpg" alt="projet 3" />
             <div class="project-infos">
               <a href="https://www.google.com" target="_blank">Everpost</a>
+              <p>2022</p>
+            </div>
+          </div>
+          <div data-scroll class="project" id="p4">
+            <img src="./assets/img/maquette.png" alt="projet 4" />
+            <div class="project-infos">
+              <a target="_blank">Yummy Nouilles</a>
               <p>2022</p>
             </div>
           </div>
