correction CSS + ajout texte HTML

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
           <h2>À propos</h2>
         </div>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-          suscipit, minima cupiditate quisquam quibusdam accusamus velit nam
-          perspiciatis odit, sed dolor doloribus? Exercitationem amet quod, unde
-          quaerat delectus eius optio expedita? In sequi non, est vero veniam,
-          earum beatae assumenda commodi recusandae consequuntur quod laboriosam
-          doloribus cum doloremque dolore hic eos perferendis explicabo culpa
-          eum sed delectus deleniti ad! Quia culpa voluptates fuga enim? Et
-          dolore fugiat labore quae, officia provident maxime voluptatum beatae
-          delectus hic, quia placeat harum quibusdam.
+          Codeur à mes heures perdues et passionné par l'intégration de
+          maquettes, j'ai fait le choix d'en faire mon hobbies.
         </p>
+        <p>
+          Cela ne m'as pas suffit car je suis tout aussi attiré par le design
+          d'interface, l'UX/UI Design à changé ma vie et me voila près pour en
+          faire mon métier.
+        </p>
+
+        <p>Me voici codeur et Designer afin d'être le plus complet possible.</p>
       </section>
 
       <!-- LINE -->
@@ -220,22 +220,25 @@
           <div data-scroll data-scroll-speed="1" class="project" id="p1">
             <img src="./assets/img/projet-1.jpg" alt="projet 1" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Lyon Beton</a>
-              <p>2020</p>
+              <a href="https://www.google.com" target="_blank">SunnySide</a>
+              <p>2022</p>
+              <p>Projet HTML/CSS</p>
             </div>
           </div>
           <div data-scroll class="project" id="p2">
             <img src="./assets/img/projet-2.png" alt="projet 2" />
             <div class="project-infos">
               <a href="https://www.google.com" target="_blank">Casta</a>
-              <p>2021</p>
+              <p>2022</p>
+              <p>Projet Front-end REACT</p>
             </div>
           </div>
           <div data-scroll class="project" id="p3">
             <img src="./assets/img/projet-3.jpg" alt="projet 3" />
             <div class="project-infos">
               <a href="https://www.google.com" target="_blank">Everpost</a>
-              <p>2022</p>
+              <p>2020</p>
+              <p>Projet FullStack REACT/NODE</p>
             </div>
           </div>
           <div data-scroll class="project" id="p4">
@@ -243,6 +246,7 @@
             <div class="project-infos">
               <a target="_blank">Yummy Nouilles</a>
               <p>2022</p>
+              <p>Maquette FIGMA</p>
             </div>
           </div>
         </div>
