--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
       <header data-scroll>
         <div class="links">
           <a href="#portfolio" data-scroll-to>portfolio</a>
-          <a href="#social" data-scroll-to>social</a>
           <a href="mailto:bilal.elimrani@icloud.com">contact</a>
         </div>
         <div class="wrapper">
@@ -68,15 +67,15 @@
         </div>
         <p>
           Codeur à mes heures perdues et passionné par l'intégration de
-          maquettes, j'ai fait le choix d'en faire mon hobbies.
+          maquettes, j'ai fait le choix d'en faire mon hobby.
         </p>
         <p>
-          Cela ne m'as pas suffit car je suis tout aussi attiré par le design
-          d'interface, l'UX/UI Design à changé ma vie et me voila près pour en
-          faire mon métier.
+          Cela ne m'a pas suffi, car je suis tout aussi attiré par le design
+          d'interface, l'UX/UI à changé ma vie et me voilà près pour en faire
+          mon métier.
         </p>
 
-        <p>Me voici codeur et Designer afin d'être le plus complet possible.</p>
+        <p>En bref, j'adore créer des maquettes.</p>
       </section>
 
       <!-- LINE -->
@@ -228,7 +227,7 @@
           <div data-scroll class="project" id="p2">
             <img src="./assets/img/projet-2.png" alt="projet 2" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Casta</a>
+              <a href="https://www.google.com" target="_blank">Movies</a>
               <p>2022</p>
               <p>Projet Front-end REACT</p>
             </div>
@@ -236,7 +235,7 @@
           <div data-scroll class="project" id="p3">
             <img src="./assets/img/projet-3.jpg" alt="projet 3" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Everpost</a>
+              <a href="https://www.google.com" target="_blank">Groupomania</a>
               <p>2020</p>
               <p>Projet FullStack REACT/NODE</p>
             </div>
