--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         <div class="wrapper">
           <div data-scroll class="appear" id="h1-wrapper">
             <h1 data-scroll data-scroll-speed="4" data-scroll-position="left">
-              Bilal El Imrani
+              Bilal
+              <br />
+              El Imrani
             </h1>
           </div>
         </div>
@@ -37,18 +39,6 @@
               data-scroll-position="left"
             >
               Designer
-            </h2>
-          </div>
-        </div>
-        <div class="wrapper">
-          <div data-scroll class="appear" id="h2-2">
-            <h2
-              data-scroll
-              data-scroll-speed="-6"
-              data-scroll-direction="horizontal"
-              data-scroll-position="left"
-            >
-              UX/UI
             </h2>
           </div>
         </div>
@@ -259,15 +249,15 @@
           <div data-scroll data-scroll-speed="1" class="project" id="p1">
             <img src="./assets/img/projet-1.jpg" alt="projet 1" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">SunnySide</a>
+              <a href="https://www.google.com" target="_blank">Lyon Béton</a>
               <p>2022</p>
               <p>Projet HTML/CSS</p>
             </div>
           </div>
           <div data-scroll class="project" id="p2">
-            <img src="./assets/img/projet-2.png" alt="projet 2" />
+            <img src="./assets/img/projet-2.jpg" alt="projet 2" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Movies</a>
+              <a href="https://www.google.com" target="_blank">Casta</a>
               <p>2022</p>
               <p>Projet Front-end REACT</p>
             </div>
@@ -275,17 +265,9 @@
           <div data-scroll class="project" id="p3">
             <img src="./assets/img/projet-3.jpg" alt="projet 3" />
             <div class="project-infos">
-              <a href="https://www.google.com" target="_blank">Groupomania</a>
+              <a href="https://www.google.com" target="_blank">Everpost</a>
               <p>2020</p>
               <p>Projet FullStack REACT/NODE</p>
-            </div>
-          </div>
-          <div data-scroll class="project" id="p4">
-            <img src="./assets/img/maquette.png" alt="projet 4" />
-            <div class="project-infos">
-              <a target="_blank">Yummy Nouilles</a>
-              <p>2022</p>
-              <p>Maquette FIGMA</p>
             </div>
           </div>
         </div>
